# movdata

./: pyproject.toml
src/movdata/: cli.py  get_mov_companies.py  get_mov_detail.py  ml.py
tests/: test_ml.py  test_movdata.py
