[project]
name = "movdata"
version = "0.2.1"
description = "Default template for PDM package"
authors = [
    {name = "S00zzang", email = "sujinpark8719561@gmail.com"},
]
dependencies = [
    "tqdm>=4.66.5",
    "requests>=2.32.3",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
test = [
    "pytest>=8.3.2",
]
[tool.pytest.ini_options]
pythonpath = "src"
