[project]
name = "movdata"
version = "0.3.0"
description = "Default template for PDM package"
authors = [
    {name = "S00zzang", email = "sujinpark8719561@gmail.com"},
]
dependencies = [
    "requests>=2.32.3",
    "tqdm>=4.66.5",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
test = [
    "pytest>=8.3.2",
    "pytest-cov>=5.0.0",
]
[tool.pytest.ini_options]
pythonpath = "src"

[project.scripts]
movdata-pong = 'movdata.cli:pong'
